<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Encrypt">
    <GridLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:padding="20dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keyword"
                android:layout_gravity="center_vertical|end"
                android:layout_column="0"
        />
        <EditText
                android:id="@+id/keyword"
                android:layout_column="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal|start"
                android:inputType="text"/>
        <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_gravity="center"
        >
            <Button
                    android:text="@string/create"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/key"
                    android:layout_column="0"
                    android:layout_gravity="end"
                    android:onClick="onClickCreate"
            />
            <Button
                    android:text="@string/show"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/show"
                    android:layout_column="1"
                    android:layout_gravity="start"
                    android:onClick="onClickShowMatrix"
            />
        </GridLayout>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:text="@string/decoded"
                android:layout_column="0"
        />
        <EditText
                android:id="@+id/decoded"
                android:layout_column="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal|start"
                android:inputType="text"
        />
        <Button
                android:text="@string/code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/code"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_gravity="top|center_horizontal"
                android:onClick="onClickCode"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:text="@string/encoded"
                android:layout_column="0"
        />
        <EditText
                android:id="@+id/coded"
                android:layout_column="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal|start"
                android:inputType="text"
        />
        <Button
                android:text="@string/decode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/decode"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_gravity="top|center_horizontal"
                android:onClick="onClickDecode"
        />
        <TextView
                android:id="@+id/structure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="40sp"
        />


    </GridLayout>
</ScrollView>